# docs-chatter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.batch.yml  docker-compose.yml  main.py  pyproject.toml
docs/: REQUIREMENTS.md
scripts/: run_batch.py
src/docs_chatter/: __init__.py  config.py
src/docs_chatter/batch/: __init__.py  indexer.py
src/docs_chatter/confluence/: __init__.py  client.py  converter.py
src/docs_chatter/rag/: __init__.py  chain.py  chunker.py  relevance.py  retriever.py
src/docs_chatter/slack/: bot.py
src/docs_chatter/vectorstore/: __init__.py  embeddings.py  opensearch.py
